Avances producto detalle (Falta)

--- a/public_html/pages/productoPrincipal.html
+++ b/public_html/pages/productoPrincipal.html
@@ -31,6 +31,9 @@
                 <form class="form-inline my-2 my-lg-0 ml-auto">
                     <input class="form-control mr-sm-2" type="search" placeholder="Buscar Producto" aria-label="Buscar"
                         id="input-search">
+                    <span class="material-symbols-outlined" id="btn-search">
+                        search
+                    </span>
                 </form>
             </div>
         </div>
@@ -38,7 +41,7 @@
 
     <div class="container">
         <div class="row " id="cardsContainer">
-            <h3 id="notFoundMessage">No se ha encontrado productos que coincidan</h3>
+
         </div>
     </div>
 
