--- a/public_html/pages/productoDetalle.html
+++ b/public_html/pages/productoDetalle.html
@@ -14,35 +14,15 @@
 <body>
 
     <div class="container text-center">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
             <h1 class="mt-4 nombre mt-0" id="nombre-text">
-                </h2>
-                <hr>
-                <div class="carousel-inner mt-3 mb-3">
-                    <div class="carousel-item active">
-                        <img src="../img/productos/mesa_cocina_1.JPG" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/productos/lampara_techo_cuadrada_1.JPG" class="d-block w-100" alt="...">
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="material-symbols-outlined arrow">
-                            chevron_left
-                        </span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="material-symbols-outlined arrow">
-                            chevron_right
-                        </span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
+            </h1>
+            <hr>
+            <div class="carousel-inner mt-3 mb-3">
+
+            </div>
         </div>
         <hr>
         <div id="precios-container">
