Avances producto detalle (Falta)

--- a/public_html/pages/productoDetalle.html
+++ b/public_html/pages/productoDetalle.html
@@ -14,16 +14,13 @@
 <body>
 
     <div class="container text-center">
-        <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-            </ol>
-            <h1 class="mt-4 nombre mt-0" id="nombre-text">
-            </h1>
-            <hr>
-            <div class="carousel-inner mt-3 mb-3">
+        <h1 class="mt-4 nombre mt-0" id="nombre-text"></h1>
+        <hr>
 
-            </div>
+        <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner mt-3 mb-3"></div>
         </div>
+
         <hr>
         <div id="precios-container">
             <p class="numbers"><strong>Precio Aquí</strong><br> <span id="precio-text"></span>&euro;</p>
