--- a/public_html/pages/productoDetalle.html
+++ b/public_html/pages/productoDetalle.html
@@ -17,9 +17,14 @@
         <h1 class="mt-4 nombre mt-0" id="nombre-text"></h1>
         <hr>
 
-        <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner mt-3 mb-3"></div>
+        <div id="carouselControls" class="carousel slide" data-ride="carousel">
+
+            <div class="carousel-inner">
+                <!-- Contenido del carrusel generado dinámicamente por JavaScript -->
+            </div>
+
         </div>
+
 
         <hr>
         <div id="precios-container">
