Todos los filtrados de productos terminados!!!

--- a/public_html/pages/productoPrincipal.html
+++ b/public_html/pages/productoPrincipal.html
@@ -56,85 +56,90 @@
             <div class="row">
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-2 item">
-                    <a href="link_de_todos">Todos <span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Todos">Todos <span class="material-symbols-outlined">
                             language
                         </span></a>
                 </div>
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-2 item">
-                    <a href="link_de_hogar">Hogar <span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Hogar">Hogar <span class="material-symbols-outlined">
                             cottage
                         </span></a>
                 </div>
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-2 item">
-                    <a href="link_de_cuadros">Cuadros <span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Cuadros">Cuadros <span class="material-symbols-outlined">
                             planner_banner_ad_pt
                         </span></a>
                 </div>
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-2 item">
-                    <a href="link_de_lamparas">Lamparas <span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Lamparas">Lamparas <span class="material-symbols-outlined">
                             light_group
                         </span></a>
                 </div>
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-2 item">
-                    <a href="link_de_infantil">Infantil <span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Infantil">Infantil <span class="material-symbols-outlined">
                             child_care
                         </span></a>
                 </div>
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-2 item">
-                    <a href="link_de_minusvalidos">Minusválidos <span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Minusvalidos">Minusválidos <span
+                            class="material-symbols-outlined">
                             accessible_forward
                         </span></a>
                 </div>
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-2 item">
-                    <a href="link_de_jardineria">Jardineria <span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Jardineria">Jardineria <span
+                            class="material-symbols-outlined">
                             psychiatry
                         </span></a>
                 </div>
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-2 item">
-                    <a href="link_de_ropa_calzado">Ropa <span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Ropa">Ropa <span class="material-symbols-outlined">
                             steps
                         </span></a>
                 </div>
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-2 item">
-                    <a href="link_de_electrodomesticos">Electrodomésticos <span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Electrodomesticos">Electrodomésticos <span
+                            class="material-symbols-outlined">
                             blender
                         </span></a>
                 </div>
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-2 item">
-                    <a href="link_de_animales">Animales <span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Animales">Animales <span class="material-symbols-outlined">
                             raven
                         </span></a>
                 </div>
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-2 item">
-                    <a href="link_de_muebles">Muebles<span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Muebles">Muebles<span class="material-symbols-outlined">
                             chair
                         </span></a>
                 </div>
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-2 item">
-                    <a href="link_de_deportes">Deportes <span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Desportes">Deportes <span
+                            class="material-symbols-outlined">
                             sports_tennis
                         </span></a>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 item">
-                    <a href="link_de_economicos">Economicos <span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Economicos">Economicos <span
+                            class="material-symbols-outlined">
                             euro
                         </span></a>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 item">
-                    <a href="link_de_varios">Varios <span class="material-symbols-outlined">
+                    <a class="nav-category-btn" data-filter="Varios">Varios <span class="material-symbols-outlined">
                             videogame_asset
                         </span></a>
                 </div>
