--- a/public_html/pages/productoPrincipal.html
+++ b/public_html/pages/productoPrincipal.html
@@ -16,27 +16,30 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-white fixed-top">
+        
         <div class="container">
             <a class="navbar-brand d-flex text-wrap" href="../index.html">
                 <p class="nav-text text-dark" id="logo-text">Productos Baratos Madrid</p>
                 <img src="../img/logo.svg" id="logo-image" alt="logo">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="material-symbols-outlined">
                     search
                 </span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
                 <form class="form-inline my-2 my-lg-0 ml-auto">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Buscar Producto" aria-label="Buscar"
-                        id="input-search">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Buscar Producto" aria-label="Buscar" id="input-search">
                     <span class="material-symbols-outlined" id="btn-search">
                         search
                     </span>
                 </form>
             </div>
+
         </div>
+
     </nav>
 
     <div class="container">
