Añadida pantalla de carga!!!

--- a/public_html/pages/productoPrincipal.html
+++ b/public_html/pages/productoPrincipal.html
@@ -44,11 +44,15 @@
 
     </nav>
 
-    <div class="container">
-        <div class="row " id="cardsContainer">
+    <main class="container">
+        <dotlottie-player id="charge-animation"
+            src="https://lottie.host/a322b458-335e-45fe-9f78-50a71caaa22e/IbHrmBUgYw.json" background="transparent"
+            speed="2" style="width: 300px; height: 300px;" loop autoplay>
+        </dotlottie-player>
+        <div class="row" id="cardsContainer">
 
         </div>
-    </div>
+    </main>
 
     <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#nav-categorias"
         aria-expanded="false" aria-controls="nav-categorias" id="btn-collapse-categorias">
@@ -164,6 +168,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+
 
 </body>
 
