--- a/public_html/index.html
+++ b/public_html/index.html
@@ -55,7 +55,7 @@
                 para facilitar la navegación y encontrar grandes ofertas en todos los departamentos. Contamos con un
                 equipo amable y servicial siempre disponible para ayudarte. Además, ofrecemos un ambiente acogedor y una
                 experiencia de compra sin complicaciones. ¡Descubre la emoción de encontrar grandes ofertas en
-                "Productos Baratos Madrid"!</p>
+                "Productos Baratos Madrid"! <span class="white">Actualizamos nuestro catálogo a diario</span></p>
             <a class="btn btn-lg" id="btn-productos" href="./pages/productoPrincipal.html" role="button">Ver
                 Productos</a>
         </div>
@@ -64,6 +64,7 @@
 
             <div class="container col-lg-5 col-md-10 col-sm-10 col-10 mt-3 seccion">
                 <h2 class="text-center">Destacados</h2>
+
                 <div class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -74,15 +75,16 @@
                         </div>
                     </div>
                 </div>
-                <p class="text-center" id="map-text">Haz <span class="bold-text">click en la imagen</span> para ver el
-                    producto</p>
+                <p class="text-center" id="map-text">Haz <a href="./pages/productoPrincipal.html"><span
+                            class="bold-text">click aqui</span></a> para ver encontrar nuestros productos</p>
             </div>
 
             <div class="container col-lg-5 col-md-10 col-sm-10 col-10 mt-3 seccion">
                 <h2 class="text-center">Localizanos</h2>
                 <div id="map"></div>
-                <p class="text-center" id="map-text">Haz <span class="bold-text">click en el logo</span> para verlo en
-                    Google Maps</p>
+                <p class="text-center" id="map-text">Haz <a href="https://maps.app.goo.gl/eJUBCKu4VJ8mv5Po9"
+                        target="_blank"><span class="bold-text">click aqui</span></a> para encontrarnos en Google Maps
+                </p>
             </div>
 
         </div>
@@ -93,7 +95,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h5>Información de Contacto</h5>
-                    <p>Dirección: Calle Gregorio Marañon 6 - Leganes</p>
+                    <p>Dirección: Calle Gregorio Marañon 6 - Leganes Madrid 28914</p>
                     <p>Teléfono: +123456789</p>
                     <p>Email: info@miempresa.com</p>
                 </div>
