--- a/public_html/pages/productoPrincipal.html
+++ b/public_html/pages/productoPrincipal.html
@@ -56,7 +56,9 @@
 
     <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#nav-categorias"
         aria-expanded="false" aria-controls="nav-categorias" id="btn-collapse-categorias">
-        Categorias
+        <span class="material-symbols-outlined" id="icon-category">
+            category
+        </span>
     </button>
 
     <div class="collapse show" id="nav-categorias">
